# bikeradar-gbfs

./: .env  Dockerfile  README  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
bikeradar/: gbfs.py  main.py  template.html
cypress/e2e/: spec.cy.js
tests/: conftest.py  test_gbfs_api.py
tests/testdata/: gbfs.json  station_information.json  station_status.json  system_information.json
